--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
+                    <skipTests>false</skipTests>
                     <suiteXmlFiles>
-                        <suiteXmlFile>allTestsSuite.xml</suiteXmlFile>
+                        <suiteXmlFile>allTestsSuite.xml </suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
